--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -101,7 +101,8 @@ and vacancy generation in domain.}
 The simulation results for different irradiation types are presented by defect concentration, vacancy supersaturation as well as sink strength plots. The calculated sink strengths are also tabulated for different domain size and bias rates.
 
 
-  \subsection{Neutron Irradiation}
+  \subsection{Neutron Irradiation} \hspace{10pt}
+  Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them travel through material corresponding to their energy and end up with an uniform or flat-like defect profiles.
     \subsubsection{Concentrations} \hspace{10pt}
       \begin{figure}[h!]  %Neutron - 1e-6 dpa/s - %0 Bias rate
         \centering
@@ -168,7 +169,8 @@ The simulation results for different irradiation types are presented by defect c
         \label{figure:sink_strengths_neutron_5_1e-6}
       \end{figure}
 
-  \subsection{Ion Irradiation}
+  \subsection{Ion Irradiation} \hspace{10pt}
+  Unlike neutrons, ions have relatively narrow energy channel width which is almost monoenergetic. Furtmermore, they cannot penetrate through material a lot because of high energy loss in collisions. These characteristic causes a non-uniform defect profiles.
     \subsubsection{Concentrations}
       \begin{figure}[h!]  %Ion - 1e-3 dpa/s - %0 Bias rate
         \centering
