--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -98,13 +98,13 @@ and vacancy generation in domain.}
 
 \section{Results} \hspace{10pt}
 
-The simulation results for different irradiation types are presented by defect concentration, vacancy supersaturation as well as sink strength plots. The calculated sink strengths are also tabulated for different domain size and bias rates.
+In reactor environment, materials are exposed to different types of particle radiation such as electron, proton, neutron and ion. This study covers two most significant irradation types, neutrons and ions. The results obtained from MOOSE simulations are presented in this section by plots of defect concentration, vacancy supersaturation and sink strengths. %The calculated sink strengths are also tabulated for different domain size and bias rates.
 
 
   \subsection{Neutron Irradiation} \hspace{10pt}
-  Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them travel through material corresponding to their energy and end up with an uniform or flat-like defect production profiles.
+  Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them travel through material corresponding to their energy and end up with a uniform or flat-like defect production profiles.
     \subsubsection{Concentrations} \hspace{10pt}
-    As a result of uniform defect production and sink at boundaries, the concentration profiles are symmetrical around domain center. For unbiased case, representing the equal amount of point defect production, the steady state value of concentrations are not changing significantly with increasing domain size as shown in Fig. \ref{figure:concentrations_neutron_0_1e-6}. The centerline concentration is sensitive to domain size and might change with increasing domain size. High neutron dose rate raises concentration levels and provides sharper and more stable profiles (see Fig. \ref{figure:concentrations_neutron_0_1e-3}) in the same domain.
+    Even though atomic collisions create vacancy-interstitial pairs, following events creates gap between the amount of point defects in favor of vacancies. At steady state condition, there are more vacancies than interstitials in microstructure. Since producing equal amount of point defects is not physically correct, production bias is used to ensure this imbalance while modeling point defects. For unbiased case, as a result of uniform defect production and reaching equilibrium at boundaries, the concentration profiles are symmetrical around domain center. The steady state concentration at center is not changing significantly with increasing size as shown in Fig. \ref{figure:concentrations_neutron_0_1e-6}. In case of high neutron dose rate, concentration levels increase, profiles become more stable (see Fig. \ref{figure:concentrations_neutron_0_1e-3}).
 
       \begin{figure}[h!]  %Neutron - 1e-6 dpa/s - %0 Bias rate
         \centering
@@ -123,7 +123,7 @@ The simulation results for different irradiation types are presented by defect c
         \label{figure:concentrations_neutron_0_1e-3}
       \end{figure}
       \hspace{10pt}
-      In reality, even though atomic collisions create vacancy-interstitial pairs, following events cause a gap between the amount of point defects. The amount of vacancies would be more than interstitials. Production bias is used to ensure this imbalance. Unlike unbiased case, the steady state concentration profiles change significantly. The centerline interstitial concentration decreases, and its profile turns down after a specific domain size (1000 nm). Moreover, the ratio between miniumum and maximum peaks gets bigger with increasing domain size, which could be explained as interstitial atom segregation near boundary. The vacancy concentration, on the other hand, increases proportional to domain size, and its profile having peak at higher concentrations as shown in Fig. \ref{figure:concentrations_neutron_5_1e-6}. Similar to unbiased case, average concentration levels increases with dose rate. But, the most important effect of high neutron dose rate is causing the interstitial concentration profile to flip in smaller domain sizes than 500 nm (see Fig. \ref{figure:concentrations_neutron_5_1e-3}).
+       Unlike unbiased case, the steady state concentration profiles change significantly. The interstitial concentration at center decreases, and its spatial profile turns down after a specific domain size (1000 nm in Fig. \ref{figure:concentrations_neutron_5_1e-6}). Moreover, the depth of profile gets larger with increasing domain size, which could be explained as acumulation of more interstitial atoms trying to reach equilibrium at boundary. The vacancy concentration, on the other hand, increases proportional to domain size, and its profile having peak at higher concentrations as shown in Fig. \ref{figure:concentrations_neutron_5_1e-6}. Similar to unbiased case, average concentration levels increases with dose rate. But, the most important effect of high neutron dose rate is causing the interstitial concentration profile to flip in smaller domain sizes than 500 nm (see Fig. \ref{figure:concentrations_neutron_5_1e-3}).
       \begin{figure}[h!]  %Neutron - 1e-6 dpa/s - %5 Bias rate
         \centering
         \subfloat{\includegraphics[scale=0.6]{interstitial_concentration_500-5000nm-neutron-5}}
