--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -19,7 +19,7 @@
 % \tableofcontents
 
 \title{Numerical Solution of Point Defect Equations by MOOSE}
-\author{Abdurrahman Ozturk$^{1}$, Karim Ahmed$^{1}$  \\
+\author{Abdurrahman Ozturk$^{1}$, Author2$^{1}$, Author3$^{1}$, Karim Ahmed$^{1}$  \\
         \small $^{1}$Texas A\&M University \\
         % \small $^{2}$University B \\
 }
