--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -60,12 +60,12 @@ described mathematically by the chemical rate balance equations given in followi
 \begin{equation}
   \begin{aligned}
     &\frac{dC_i}{dt} = K_0 - K_{iv}C_iC_v - K_{is}C_iC_s + \nabla\cdot D_i\nabla C_i\\
-    &\frac{dC_v}{dt} = K_0 - K_{iv}C_iC_v - K_{vs}C_vC_s + \nabla\cdot D_v\nabla C_v\\
+    &\frac{dC_v}{dt} = (1+b)K_0 - K_{iv}C_iC_v - K_{vs}C_vC_s + \nabla\cdot D_v\nabla C_v\\
   \end{aligned}}
   \label{equation:point_defect_equations}
 \end{equation}\\
 
-There are different terms with different rate coefficients as seen in Eq. \ref{equation:point_defect_equations}. The first term on the RHS is a source term, representing defect generation with rate of K\textsubscript{0}. The second term is a reaction term, referring the recombination process if the defect x reacts with defect y with a rate of K\textsubscript{xy}. The third term is also a reaction term, representing the reaction between the defect x and the sink s with a rate of K\textsubscript{xs}. In this study, the sink concentration is assumed constant and uniformly distributed over domain. The last term is diffusion term which is resolving the spatial behavior of defects.\\
+There are different terms with different rate coefficients as seen in Eq. \ref{equation:point_defect_equations}. The first term on the RHS is a source term, representing defect generation with rate of \textit{K\textsubscript{0}}. In vacancy equation, \textit{b} is used as percent production bias to create a difference between interstitial and vacancy generation in domain. The second term is a reaction term, referring the recombination process if the defect \textit{x} reacts with defect \textit{y} with a rate of \textit{K\textsubscript{xy}}. The third term is also a reaction term, representing the reaction between the defect \textit{x} and the sink \text{s} with a rate of \textit{K\textsubscript{xs}}. In this study, the sink concentration is assumed constant and uniformly distributed over domain. The last term is diffusion term which is resolving the spatial behavior of defects.\\
 
 Another form of point defect equations can be written by using sink strength, \textit{k} definition for sink reaction term.\\
 
@@ -79,12 +79,10 @@ Another form of point defect equations can be written by using sink strength, \t
 \begin{equation}
   \begin{aligned}
     &\frac{dC_i}{dt} = K_0 - K_{iv}C_iC_v - k_i^2D_iC_i + \nabla\cdot D_i\nabla C_i\\
-    &\frac{dC_v}{dt} = K_0 - K_{iv}C_iC_v - k_v^2D_vC_v + \nabla\cdot D_v\nabla C_v\\
+    &\frac{dC_v}{dt} = (1+b)K_0 - K_{iv}C_iC_v - k_v^2D_vC_v + \nabla\cdot D_v\nabla C_v\\
   \end{aligned}}
   \label{equation:point_defect_equations_sink_strength}
 \end{equation}\\
-
-!!!mention!!! The production bias is a factor that is used to create a difference between interstitial and vacancy generation in domain.}
 
 \subsection{Non-dimensionalization of Point Defect Equations} \hspace{10pt}
 The time space of defect interactions is enormously large, which could differ from nanoseconds to hours. In addition, rate coefficients also have different orders. To make it easier to solve point defect equations numerically, their non-dimensionalized forms are implemented in MOOSE. The non-dimensionalization scheme and final form of equations are given in this section.
@@ -119,17 +117,17 @@ Nickel is selected as a base material, and its properties are used in calculatio
   \centering
   \caption{Simulation Parameters}
   \label{table:simulation_parameters}
-  \begin{tabular}{ ||p{2cm}|p{2cm}|p{3cm}|p{2cm}|p{2cm}||  }
+  \begin{tabular}{ ||p{2cm}|p{3cm}|p{3cm}|p{3cm}|p{3cm}||  }
      % \multicolumn{5}{|c|}{Simulation Parameters} \\
      \hline
-     Type & Dose Rate & Defect Production & Temperature & Sink Density\\
+     Type & Dose Rate (dpa/s) & Defect Production & Temperature (K) & Sink Density (m^{-3})\\
      \hline
      \hline
-     Neutron  & 1e-3 dpa/s  & Uniform     & 773 K & 1e18 1/m^{3}\\
-              & 1e-6 dpa/s  & Uniform     & 773 K & 1e18 1/m^{3}\\
+     Neutron  & 1e-3  & Uniform     & 773 & 1e18\\
+              & 1e-6  & Uniform     & 773 & 1e18\\
      \hline
-     Ion      & 1e-3 dpa/s  & Distributed & 773 K & 1e18 1/m^{3}\\
-              & 1e-6 dpa/s  & Distributed & 773 K & 1e18 1/m^{3}\\
+     Ion      & 1e-3  & Distributed & 773 & 1e18\\
+              & 1e-6  & Distributed & 773 & 1e18\\
      \hline
   \end{tabular}
 \end{table}
@@ -140,9 +138,9 @@ Nickel is selected as a base material, and its properties are used in calculatio
 In reactor environment, materials are exposed to different types of particle radiation such as electron, proton, neutron and ion. This study covers two most significant irradation types, neutrons and ions. The results obtained from MOOSE simulations are presented in this section by plots of defect concentration, vacancy supersaturation and sink strengths. %The calculated sink strengths are also tabulated for different domain size and bias rates.
 
   \subsection{Neutron Irradiation} \hspace{10pt}
-  Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them to travel through material corresponding to their energies. Thus, they end up with a uniform or flat-like defect production profiles.
+  Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them to travel through material corresponding to their energies. Thus, they cause a uniform or flat-like defect production profile in material.\cite{was2016}
 
-  Numerical models are frequently used to solve scientific problems. Users of these models are making decisions based on results obtained from simulations, so the numerical approach should be reliable. Before presenting MOOSE results of this study, a simple 1D spherical grain approach is tested in MOOSE and the results are compared to analytical results for validation.
+  Numerical models are frequently used to solve scientific problems and make decisions based on results obtained from simulations, but first, the numerical approach should be reliable. Before presenting results from this study, a simple 1D spherical grain problem for neutron irradation is solved by MOOSE, and its results are compared to analytical results for validation.
 
   In this approach the recombination term in Eq. \ref{equation:point_defect_equations_sink_strength} is neglected, and the steady state analytical solutions for spherical grain of radius \textit{a} are found as below.\cite{heald1977}\\
 
@@ -169,14 +167,14 @@ In reactor environment, materials are exposed to different types of particle rad
     \label{figure:concentrations_MOOSE_analytical}
   \end{figure}
     \subsubsection{Concentrations} \hspace{10pt}
-    Even though atomic collisions create vacancy-interstitial pairs, following events creates gap between the amount of point defects in favor of vacancies. At steady state condition, there are more vacancies than interstitials in microstructure. Since producing equal amount of point defects is not physically correct, production bias is used to ensure this imbalance while modeling point defects. For unbiased case, as a result of uniform defect production and reaching equilibrium at boundaries, the concentration profiles are symmetrical around domain center. The steady state concentration at center is not changing significantly with increasing size as shown in Fig. \ref{figure:concentrations_neutron_0_1e-6}. In case of high neutron dose rate, concentration levels increase, profiles become more stable (see Fig. \ref{figure:concentrations_neutron_0_1e-3}).
+    Even though atomic collisions create vacancy-interstitial pairs, following events creates gap between the amount of point defects in favor of vacancies. At steady state condition, there are more vacancies than interstitials in microstructure. Since producing equal amount of point defects is not physically correct, production bias is used to ensure this imbalance in modeling point defects. For unbiased case, as a result of uniform defect production and equilibrium condition at boundaries, the concentration profiles are symmetrical around domain center. The steady state concentration at center is not changing significantly with increasing size as shown in Fig. \ref{figure:concentrations_neutron_0_1e-6}. In case of high neutron dose rate, concentration levels increase, profiles become more stable (see Fig. \ref{figure:concentrations_neutron_0_1e-3}).\\
 
       \begin{figure}[h!]  %Neutron - 1e-6 dpa/s - %0 Bias rate
         \centering
         \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-neutron-0}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-neutron-0}}
-        \caption{Concentration profiles for neutron irradation with 0\% Production Bias}
+        \caption{Concentration profiles for low dose rate neutron irradation with 0\% Production Bias}
         \label{figure:concentrations_neutron_0_1e-6}
       \end{figure}
       \begin{figure}[h!]  %Neutron - 1e-3 dpa/s - %0 Bias rate
@@ -187,17 +185,19 @@ In reactor environment, materials are exposed to different types of particle rad
         \caption{Concentration profiles for high dose neutron irradation with 0\% Production Bias}
         \label{figure:concentrations_neutron_0_1e-3}
       \end{figure}
-
-       Unlike unbiased case, the steady state concentration profiles change significantly. The interstitial concentration at center decreases, and its spatial profile turns down after a specific domain size (1000 nm in Fig. \ref{figure:concentrations_neutron_5_1e-6}). Moreover, the depth of profile gets larger with increasing domain size, which could be explained as acumulation of more interstitial atoms trying to reach equilibrium at boundary. The vacancy concentration, on the other hand, increases proportional to domain size, and its profile having peak at higher concentrations as shown in Fig. \ref{figure:concentrations_neutron_5_1e-6}. Similar to unbiased case, average concentration levels increases with dose rate. But, the most important effect of high neutron dose rate is causing the interstitial concentration profile to flip in smaller domain sizes than 500 nm (see Fig. \ref{figure:concentrations_neutron_5_1e-3}).
+      \newpage
+       If production bias is applied, the steady state concentration profiles change significantly. The interstitial concentration at center decreases, and its spatial profile turns down after \textit{critical domain size} (${\sim}$1000 nm in Fig. \ref{figure:concentrations_neutron_5_1e-6}). Moreover, the depth of profile gets larger with increasing domain size, which could be explained as acumulation of more interstitial atoms trying to reach equilibrium at boundary. The vacancy concentration, on the other hand, increases proportional to domain size, and its profile having peak at higher concentrations as shown in Fig. \ref{figure:concentrations_neutron_5_1e-6}.\\
       \begin{figure}[h!]  %Neutron - 1e-6 dpa/s - %5 Bias rate
         \centering
         \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-neutron-5}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-neutron-5}}
-        \caption{Concentration profiles for neutron irradation with 5\% Production Bias}
+        \caption{Concentration profiles for low dose rate neutron irradation with 5\% Production Bias}
         \label{figure:concentrations_neutron_5_1e-6}
-      \end{figure}
-      \begin{figure}[h!]  %Neutron - 1e-3 dpa/s - %5 Bias rate
+      \end{figure}\\
+
+      Similar to unbiased case, average concentration levels increases with dose rate. But, the most important effect of high neutron dose rate is causing the interstitial concentration profile to flip in smaller domain sizes than 500 nm (see Fig. \ref{figure:concentrations_neutron_5_1e-3}).\\
+      \begin{figure}[htb!]  %Neutron - 1e-3 dpa/s - %5 Bias rate
         \centering
         \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-high_neutron-5}}
         \qquad
@@ -213,7 +213,7 @@ In reactor environment, materials are exposed to different types of particle rad
         \subfloat{\includegraphics[scale=0.55]{super_saturation_500-5000nm-neutron-5}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{super_saturation_500-5000nm-high_neutron-5}}
-        \caption{Vacancy Supersaturation profiles for normal and high dose neutron irradation with 5\% Production Bias}
+        \caption{Vacancy Supersaturation profiles for low and high dose neutron irradation with 5\% Production Bias}
         \label{figure:vacancy_supersaturation_neutron_5}
       \end{figure}
 
@@ -225,7 +225,7 @@ In reactor environment, materials are exposed to different types of particle rad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_k}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_Z}}
-        \caption{Sink Strengths for neutron irradiation with 0\% Production Bias}
+        \caption{Sink Strengths for low dose rate neutron irradiation with 0\% Production Bias}
         \label{figure:sink_strengths_neutron_0_1e-6}
       \end{figure}
       \begin{figure}[h!]  %Sink Strength - Neutron 1e-6 dpa/s - 5% Bias rate
@@ -233,51 +233,56 @@ In reactor environment, materials are exposed to different types of particle rad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_k}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_Z}}
-        \caption{Sink Strengths for neutron irradation with 5\% Production Bias}
+        \caption{Sink Strengths for low dose rate neutron irradation with 5\% Production Bias}
         \label{figure:sink_strengths_neutron_5_1e-6}
       \end{figure}
 
   \subsection{Ion Irradiation} \hspace{10pt}
-  Unlike neutrons, ions have relatively narrow energy channel width which is almost monoenergetic. Furthermore, they cannot penetrate through material too much because of their high energy loss in collisions. These characteristic causes a non-uniform defect profiles. The Fig. \ref{figure:defect_production_500-5000nm} shows the defect production profiles in different domain sizes for ion irradation.
+  Unlike neutrons, ions have relatively narrow energy channel width which is almost monoenergetic. Furthermore, they cannot penetrate through material too much because of their high energy loss in collisions. These characteristic causes a non-uniform defect production profile. The defect production profile used for ion irradation simulations are shown in Fig. \ref{figure:defect_production}. The dose rate, K\textsubscript{0} and domain size (1000 nm) would be scaled for different cases, but the profile is going to stay unchanged.
     \begin{figure}[h!]  %Ion irradation
       \centering
-      \subfloat{\includegraphics[scale=0.55]{defect_production_500-5000nm}}
+      \subfloat{\includegraphics[scale=0.3]{defect_production}}
       \qquad
-      \caption{Defect production profiles for ion irradation.}
-      \label{figure:defect_production_500-5000nm}
+      \caption{Defect production profile for ion irradation.}
+      \label{figure:defect_production}
     \end{figure}
     \newpage
-    \subsubsection{Concentrations}
+    \subsubsection{Concentrations} \hspace{10pt}
+    The effect of defect production distribution is the first thing that can be observed easily on concentration profiles. Since, all defect production profiles having peak at around half of the domain, the concentration profiles are also showing the same behavior and reaching maximum at the center of domain, then waning through boundaries.
+
+    If production bias is zero, maximum concentration that point defects can reach is equal for all different domain sizes shown in Fig. \ref{figure:concentrations_ion_0_1e-6}. High ion dose rate is scaling up the concentration levels without making a significant change in profiles (see Fig. \ref{figure:concentrations_ion_0_1e-3}).
       \begin{figure}[h!]  %Ion - 1e-3 dpa/s - %0 Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-ion-0}}
+        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-low_ion-0}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-ion-0}}
+        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-low_ion-0}}
         \caption{Concentration profiles for low dose ion irradation with 0\% Production Bias}
         \label{figure:concentrations_ion_0_1e-6}
       \end{figure}
       \begin{figure}[h!]  %Ion - 1e-6 dpa/s - %0 Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-low_ion-0}}
+        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-ion-0}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-low_ion-0}}
-        \caption{Concentration profiles for ion irradiation with 0\% Production Bias}
+        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-ion-0}}
+        \caption{Concentration profiles for high dose rate ion irradiation with 0\% Production Bias}
         \label{figure:concentrations_ion_0_1e-3}
       \end{figure}
+      \newpage
+      In case of applying production bias, profiles become completely different. Although the flipping behavior observed in neutron irradation case is also visible in ion irradation case, the non-uniform defect production causes asymmetrical interstitial concentration profile in Fig. \ref{figure:concentrations_ion_5_1e-6}. The vacancy concentration profiles also become asymmetrical and shift up with increasing domain size. Increasing ion dose rate from 1e-6 dpa/s to 1e-3 dpa/s reduces the effect of defect production profile as well as critical domain size to flip (see Fig. \ref{figure:concentrations_ion_5_1e-3}).
       \begin{figure}[h!]  %Ion - 1e-3 dpa/s - %5 Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-ion-5}}
+        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-low_ion-5}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-ion-5}}
+        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-low_ion-5}}
         \caption{Concentration profiles for low dose ion irradation with 5\% Production Bias}
         \label{figure:concentrations_ion_5_1e-6}
       \end{figure}
       \begin{figure}[h!]  %Ion - 1e-6 dpa/s - %5 Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-low_ion-5}}
+        \subfloat{\includegraphics[scale=0.55]{interstitial_concentration_500-5000nm-ion-5}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-low_ion-5}}
-        \caption{Concentration profiles for ion irradation with 5\% Production Bias}
+        \subfloat{\includegraphics[scale=0.55]{vacancy_concentration_500-5000nm-ion-5}}
+        \caption{Concentration profiles for high dose rate ion irradation with 5\% Production Bias}
         \label{figure:concentrations_ion_5_1e-3}
       \end{figure}
 
@@ -307,48 +312,48 @@ In reactor environment, materials are exposed to different types of particle rad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_k}}
         \qquad
         \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_Z}}
-        \caption{Sink Strengths for ion irradiation with 5\% Production Bias}
+        \caption{Sink Strengths for high dose rate ion irradiation with 5\% Production Bias}
         \label{figure:sink_strengths_ion_5_1e-6}
       \end{figure}
 
 
-In nano-scale case, since the domain size is not big enough, the boundaries become
-closer to each other. This causes point defects to reach sinks before they react with each other
-and recombination plateau to disappear as it can be seen in Fig. 2. The nanoscale case acts like
-a high-sink and high-temp condition case despite its low-sink and low-temperature. Therefore,
-change in production bias does not have a significant effect on average concentration behavior
-in nanoscale
-
-On the other hand, in micro-scale case, the domain has reasonable size, and thus
-boundaries are far from each other. This provides defects more time to accumulate inside the
-domain and recombine with each other after they reach a specific concentration. Figure 3
-clearly shows the effect of production bias on average concentration.
-
-Effect of production bias on spatial profile of defect concentrations for nanoscale is
-shown in Figure 4. The results seem not affected too much because of the same reasons
-mentioned previously for average concentration.
-
-The micro-scale results (Fig. 5) are quite interesting and worth to think over. The
-concentration profiles of interstitials for 0.1%, 5% and 10% cases are flipped over. A closer look
-at evolution of 5% case over time in Fig. 6, after the end of quasi-steady-state region (t=10 -4 s in
-Fig 3.), the average interstitial concentration starts to decrease as they segregate through sinks.
-At steady state, the average interstitial concentration becomes minimum at the center and
-maximum near boundaries because of segregation.
-
-The defect production rate (K 0 ) is the source term in point defect equations and has a
-significant effect on concentrations.
-In nano-scale case, the average concentration behavior is like high-sink density behavior
-because of narrow domain. But, when the defect production rate increases, the average
-concentration is shifted upward, and interstitial and vacancy average concentrations get closer
-to each other because the production compensates more absorption at sinks than previous.
-Based on this, if the production rate increased sufficiently, the recombination zone would
-appear again in nano-scale domain.\cite{was2016}
+% In nano-scale case, since the domain size is not big enough, the boundaries become
+% closer to each other. This causes point defects to reach sinks before they react with each other
+% and recombination plateau to disappear as it can be seen in Fig. 2. The nanoscale case acts like
+% a high-sink and high-temp condition case despite its low-sink and low-temperature. Therefore,
+% change in production bias does not have a significant effect on average concentration behavior
+% in nanoscale
+%
+% On the other hand, in micro-scale case, the domain has reasonable size, and thus
+% boundaries are far from each other. This provides defects more time to accumulate inside the
+% domain and recombine with each other after they reach a specific concentration. Figure 3
+% clearly shows the effect of production bias on average concentration.
+%
+% Effect of production bias on spatial profile of defect concentrations for nanoscale is
+% shown in Figure 4. The results seem not affected too much because of the same reasons
+% mentioned previously for average concentration.
+%
+% The micro-scale results (Fig. 5) are quite interesting and worth to think over. The
+% concentration profiles of interstitials for 0.1%, 5% and 10% cases are flipped over. A closer look
+% at evolution of 5% case over time in Fig. 6, after the end of quasi-steady-state region (t=10 -4 s in
+% Fig 3.), the average interstitial concentration starts to decrease as they segregate through sinks.
+% At steady state, the average interstitial concentration becomes minimum at the center and
+% maximum near boundaries because of segregation.
+%
+% The defect production rate (K 0 ) is the source term in point defect equations and has a
+% significant effect on concentrations.
+% In nano-scale case, the average concentration behavior is like high-sink density behavior
+% because of narrow domain. But, when the defect production rate increases, the average
+% concentration is shifted upward, and interstitial and vacancy average concentrations get closer
+% to each other because the production compensates more absorption at sinks than previous.
+% Based on this, if the production rate increased sufficiently, the recombination zone would
+% appear again in nano-scale domain.
 
 \section{Conclusion} \hspace{10pt}
 
-The most significant parameters are found as domain size and bias rate as shown in plots in this section.
-The shape of profile is defined by balance between parameters(bias,dose rate, domain size,..)
-An online tool could be created to play with different parameters.
+The rate theory equations resolve the temporal and spatial concentration profiles of point defects. The behavior of concentration distributions are controlled by parameters given in equation, representing their reactions and diffusion in domain. According to the results obtained in this study, the combination of production bias, production dose rate, production profile and domain size determine whether the steady state point defect concentration profile is symmetrical, flipped or both. There is always a critical value for parameters that could change the defect concentration profile entirely.
+
+% An online tool could be created to play with different parameters.
 % \begin{thebibliography}{00}
 % \bibitem{b2} Garry S. Was.
 % \end{thebibliography}
